# StellarForge - Reusable Soroban smart contract primitives for the Stellar ecosystem
# 
# This workspace contains production-ready, well-tested smart contracts built on Soroban.
# Each contract is a self-contained primitive (vesting, streaming payments, multisig, 
# governance, and price feeds) that can be deployed as-is or composed into larger DeFi applications.

[workspace]
resolver = "2"

members = [
    "crates/forge-errors",
    "crates/forge-constants",
    "contracts/forge-vesting",
    "contracts/forge-vesting-factory",
    "contracts/forge-stream",
    "contracts/forge-multisig",
    "contracts/forge-governor",
    "contracts/forge-oracle",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.6" }
forge-errors = { path = "crates/forge-errors" }
forge-constants = { path = "crates/forge-constants" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
